H3CIPMSJAVA-20180830/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>IPMS</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>A%3A Confirm the project</fullName>
        </values>
        <values>
            <fullName>B%3A Technical Communion</fullName>
        </values>
        <values>
            <fullName>C%3A Technical Negotiation</fullName>
        </values>
        <values>
            <fullName>D%3A Business Negotiation</fullName>
        </values>
        <values>
            <fullName>E%3A Initial Contract</fullName>
        </values>
        <values>
            <fullName>F%3A Delay the Contract</fullName>
        </values>
        <values>
            <fullName>G%3A Cancel the Contract</fullName>
        </values>
        <values>
            <fullName>L%3A Lost</fullName>
        </values>
        <values>
            <fullName>W%3A Win</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard</fullName>
        <description>H3C Sales</description>
        <isActive>true</isActive>
        <values>
            <fullName>01 - Understand Customer</fullName>
        </values>
        <values>
            <fullName>02 - Validate Opportunity</fullName>
        </values>
        <values>
            <fullName>03 - Qualify the Opportunity</fullName>
        </values>
        <values>
            <fullName>04A - Develop Solution</fullName>
        </values>
        <values>
            <fullName>04B - Propose Solution</fullName>
        </values>
        <values>
            <fullName>05 - Negotiate %26 Close</fullName>
        </values>
        <values>
            <fullName>06 - Won%2C Deploy %26 Expand</fullName>
        </values>
        <values>
            <fullName>Error</fullName>
        </values>
        <values>
            <fullName>H3C Not Pursued</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Corp Level Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submit</fullName>
                </value>
                <value>
                    <fullName>Approving</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <inlineHelpText>NEC (NEC); 
BR (The Belt and Road);
WW (World Wide);
SEA  (South East Asia);</inlineHelpText>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NEC</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>WW</fullName>
                </value>
                <value>
                    <fullName>SEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Month__c</fullName>
        <description>Test_Close Month</description>
        <formula>TEXT(YEAR(CloseDate))&amp;&quot;-&quot;&amp;TEXT(MONTH(CloseDate))</formula>
        <label>Close Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Countrys</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cross_Selling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cross Selling</description>
        <label>Cross Selling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Engagement__c</fullName>
        <label>Customer Engagement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End User Sales</fullName>
                </value>
                <value>
                    <fullName>Alliance</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Source__c</fullName>
        <label>Deal Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                    <default>true</default>
                    <label>Sales</label>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dev_Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>*Dev Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_Distributor_Name__c</fullName>
        <formula>Distributor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>*Dev Distributor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Name__c</fullName>
        <inlineHelpText>When you select Others Distributor, you need write a distributor name in this.</inlineHelpText>
        <label>Distributor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>IPMS Project, Closed Project</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Distributor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>OpportunitiesDistributor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Revenue_KUSD__c</fullName>
        <label>Estimated Revenue (KUSD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fulfillment__c</fullName>
        <label>Fulfillment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Customer_Engagement__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>HP Fulfilled</fullName>
                </value>
                <value>
                    <fullName>Channel Fulfilled</fullName>
                </value>
                <value>
                    <fullName>VSI Fulfilled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HPE_SFDC_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>HPE SFDC ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HPFS_Engaged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HPEFS Engaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HP_Solution__c</fullName>
        <label>HP Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application Transformation</fullName>
                </value>
                <value>
                    <fullName>Big Data</fullName>
                </value>
                <value>
                    <fullName>Cloud Enterprise</fullName>
                </value>
                <value>
                    <fullName>Cloud Foundation</fullName>
                </value>
                <value>
                    <fullName>Cloud Services</fullName>
                </value>
                <value>
                    <fullName>Converged Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Hyperscale</fullName>
                </value>
                <value>
                    <fullName>IT Performance Suite (ITPS)</fullName>
                </value>
                <value>
                    <fullName>Security &amp; Risk Management</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPMS_Auto_Num__c</fullName>
        <displayFormat>{YYYY}{MM}{DD}{00000}</displayFormat>
        <label>IPMS Auto Num</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>IPMS_BU__c</fullName>
        <label>IPMS BU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPMS_Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1. Customer Reasons</fullName>
                    <default>true</default>
                    <label>1. Customer Reasons</label>
                </value>
                <value>
                    <fullName>2. Technical Reasons</fullName>
                </value>
                <value>
                    <fullName>3. Price Reasons</fullName>
                </value>
                <value>
                    <fullName>4. Service Reasons</fullName>
                </value>
                <value>
                    <fullName>5. Other Reasons</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Enterprises</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Carrier</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Week__c</fullName>
        <formula>IF(
case(mod(today() - DATE(1985,6,24),7),
6, if(DATEVALUE( Update_Time__c ) - today() &lt;=0, if(DATEVALUE( Update_Time__c ) - today() &gt;-7,&quot;This week&quot;,if(today() -   DATEVALUE( Update_Time__c ) &lt;=14,&quot;Previous Week&quot;,&quot;Other&quot;)),if(DATEVALUE( Update_Time__c ) - today() &lt;8,&quot;Next Week&quot;,&quot;Other&quot;)), 
0, if(DATEVALUE( Update_Time__c ) - today() &lt;=7, if(DATEVALUE( Update_Time__c ) - today() &gt;-1,&quot;This week&quot;,if(today() -   DATEVALUE( Update_Time__c ) &lt;=8,&quot;Previous Week&quot;,&quot;Other&quot;)),if(DATEVALUE( Update_Time__c ) - today() &lt;15,&quot;Next Week&quot;,&quot;Other&quot;)), 
1, if(DATEVALUE( Update_Time__c ) - today() &lt;=6, if(DATEVALUE( Update_Time__c ) - today() &gt;-2,&quot;This week&quot;,if(today() -   DATEVALUE( Update_Time__c ) &lt;=9,&quot;Previous Week&quot;,&quot;Other&quot;)),if(DATEVALUE( Update_Time__c ) - today() &lt;14,&quot;Next Week&quot;,&quot;Other&quot;)), 
2, if(DATEVALUE( Update_Time__c ) - today() &lt;=5, if(DATEVALUE( Update_Time__c ) - today() &gt;-3,&quot;This week&quot;,if(today() -   DATEVALUE( Update_Time__c ) &lt;=10,&quot;Previous Week&quot;,&quot;Other&quot;)),if(DATEVALUE( Update_Time__c ) - today() &lt;13,&quot;Next Week&quot;,&quot;Other&quot;)), 
3, if(DATEVALUE( Update_Time__c ) - today() &lt;=4, if(DATEVALUE( Update_Time__c ) - today() &gt;-4,&quot;This week&quot;,if(today() -   DATEVALUE( Update_Time__c ) &lt;=11,&quot;Previous Week&quot;,&quot;Other&quot;)),if(DATEVALUE( Update_Time__c ) - today() &lt;12,&quot;Next Week&quot;,&quot;Other&quot;)), 
4, if(DATEVALUE( Update_Time__c ) - today() &lt;=3, if(DATEVALUE( Update_Time__c ) - today() &gt;-5,&quot;This week&quot;,if(today() -   DATEVALUE( Update_Time__c ) &lt;=12,&quot;Previous Week&quot;,&quot;Other&quot;)),if(DATEVALUE( Update_Time__c ) - today() &lt;11,&quot;Next Week&quot;,&quot;Other&quot;)), 
5, if(DATEVALUE( Update_Time__c ) - today() &lt;=2, if(DATEVALUE( Update_Time__c ) - today() &gt;-6,&quot;This week&quot;,if(today() -   DATEVALUE( Update_Time__c ) &lt;=13,&quot;Previous Week&quot;,&quot;Other&quot;)),if(DATEVALUE( Update_Time__c ) - today() &lt;10,&quot;Next Week&quot;,&quot;Other&quot;)),
 &quot;&quot;)
= &quot;Previous Week&quot;,
True,
False
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Most_Recent__c</fullName>
        <description>UL @ibreakingpoint 20151112</description>
        <label>Lead Source-Most Recent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HP.com - Lead Generation</fullName>
                </value>
                <value>
                    <fullName>HP.com - Contact Me</fullName>
                </value>
                <value>
                    <fullName>Tradeshow/Live Event</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>SEO - Natural Search</fullName>
                </value>
                <value>
                    <fullName>SEM - Paid Search</fullName>
                </value>
                <value>
                    <fullName>Third Party - Content Syndication/Other</fullName>
                </value>
                <value>
                    <fullName>Pronq.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_Description__c</fullName>
        <label>Lost Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Main_Products_Quantity__c</fullName>
        <label>Main Products &amp; Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <defaultValue>false</defaultValue>
        <label>H3C Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opp_Auto_Number__c</fullName>
        <description>计算Opportunity ID时的辅助字段</description>
        <displayFormat>{00000}</displayFormat>
        <label>*Opp Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <label>Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Potential_Blacklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential Blacklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NET</fullName>
                </value>
                <value>
                    <fullName>SOHO</fullName>
                </value>
                <value>
                    <fullName>ROUTER</fullName>
                </value>
                <value>
                    <fullName>WLAN</fullName>
                </value>
                <value>
                    <fullName>BCS&amp;CS</fullName>
                    <isActive>false</isActive>
                    <label>BCS&amp;CS</label>
                </value>
                <value>
                    <fullName>BR</fullName>
                    <isActive>false</isActive>
                    <label>BR</label>
                </value>
                <value>
                    <fullName>BSM</fullName>
                    <isActive>false</isActive>
                    <label>BSM</label>
                </value>
                <value>
                    <fullName>DATA</fullName>
                    <isActive>false</isActive>
                    <label>DATA</label>
                </value>
                <value>
                    <fullName>H3CLOUD</fullName>
                    <isActive>false</isActive>
                    <label>H3CLOUD</label>
                </value>
                <value>
                    <fullName>H3CU</fullName>
                    <isActive>false</isActive>
                    <label>H3CU</label>
                </value>
                <value>
                    <fullName>HPN</fullName>
                    <isActive>false</isActive>
                    <label>HPN</label>
                </value>
                <value>
                    <fullName>ICG</fullName>
                    <isActive>false</isActive>
                    <label>ICG</label>
                </value>
                <value>
                    <fullName>ICT/EPON</fullName>
                    <isActive>false</isActive>
                    <label>ICT/EPON</label>
                </value>
                <value>
                    <fullName>IMC PLAT</fullName>
                    <isActive>false</isActive>
                    <label>IMC PLAT</label>
                </value>
                <value>
                    <fullName>INT</fullName>
                    <isActive>false</isActive>
                    <label>INT</label>
                </value>
                <value>
                    <fullName>ISS</fullName>
                    <isActive>false</isActive>
                    <label>ISS</label>
                </value>
                <value>
                    <fullName>IoT</fullName>
                    <isActive>false</isActive>
                    <label>IoT</label>
                </value>
                <value>
                    <fullName>NFV</fullName>
                    <isActive>false</isActive>
                    <label>NFV</label>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                    <isActive>false</isActive>
                    <label>OTHER</label>
                </value>
                <value>
                    <fullName>SECURITY</fullName>
                    <isActive>false</isActive>
                    <label>SECURITY</label>
                </value>
                <value>
                    <fullName>SERVICE</fullName>
                    <isActive>false</isActive>
                    <label>SERVICE</label>
                </value>
                <value>
                    <fullName>SMBSEC</fullName>
                    <isActive>false</isActive>
                    <label>SMBSEC</label>
                </value>
                <value>
                    <fullName>SOUND</fullName>
                    <isActive>false</isActive>
                    <label>SOUND</label>
                </value>
                <value>
                    <fullName>STORAGE</fullName>
                    <isActive>false</isActive>
                    <label>STORAGE</label>
                </value>
                <value>
                    <fullName>TSC</fullName>
                    <isActive>false</isActive>
                    <label>TSC</label>
                </value>
                <value>
                    <fullName>VIEW</fullName>
                    <isActive>false</isActive>
                    <label>VIEW</label>
                </value>
                <value>
                    <fullName>ZS</fullName>
                    <isActive>false</isActive>
                    <label>ZS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Latest_Progress__c</fullName>
        <label>Project Latest Progress</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Level__c</fullName>
        <label>Project Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Department</fullName>
                </value>
                <value>
                    <fullName>Corp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Projects_Number__c</fullName>
        <label>Project Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Regions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_equipment_shipment_Time__c</fullName>
        <label>Requested equipment shipment Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ResellerName__c</fullName>
        <formula>Reseller_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ResellerName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reseller_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reseller</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>IPMS Project, Closed Project</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Reseller</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Reseller)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Lead_18_ID__c</fullName>
        <formula>CASESAFEID(Source_Leads_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Lead 18 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Leads_ID__c</fullName>
        <label>Source Leads ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Startup_Date__c</fullName>
        <label>Startup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <label>Sub Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Time__c</fullName>
        <label>Update Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WON_Vendor__c</fullName>
        <label>WON Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Win_Rate__c</fullName>
        <label>Win Rate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A(100% to win)</fullName>
                </value>
                <value>
                    <fullName>B(80% to win)</fullName>
                </value>
                <value>
                    <fullName>C(50% to win)</fullName>
                </value>
                <value>
                    <fullName>D(difficult to win)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Won_Lost_Date__c</fullName>
        <label>Won/Lost Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Won_Lost_Reason__c</fullName>
        <label>Won/Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other Commercial Terms</fullName>
                </value>
                <value>
                    <fullName>HP Reputation</fullName>
                </value>
                <value>
                    <fullName>Price &amp; Price Affecting Terms</fullName>
                </value>
                <value>
                    <fullName>Lease Program</fullName>
                </value>
                <value>
                    <fullName>Asset Management</fullName>
                </value>
                <value>
                    <fullName>Product/Services Offering</fullName>
                </value>
                <value>
                    <fullName>Credit Declined</fullName>
                </value>
                <value>
                    <fullName>EOL Options</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Relationship with Customers</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Data Entry Issue</fullName>
                </value>
                <value>
                    <fullName>Customer Cancelled</fullName>
                </value>
                <value>
                    <fullName>Consolidated</fullName>
                </value>
                <value>
                    <fullName>Margin</fullName>
                </value>
                <value>
                    <fullName>Resources</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Legal Terms</fullName>
                </value>
                <value>
                    <fullName>HP Product Lost</fullName>
                </value>
                <value>
                    <fullName>References</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Project</fullName>
        <columns>Projects_Number__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Estimated_Revenue_KUSD__c</columns>
        <columns>Business_Type__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Project_Level__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Distributor__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>Update_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>IPMS All Project</label>
    </listViews>
    <listViews>
        <fullName>Closed_Project</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Projects_Number__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Estimated_Revenue_KUSD__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Business_Type__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Project_Level__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>Update_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>W: Win,L: Lost</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.IPMS_Project,Opportunity.Closed_Project</value>
        </filters>
        <label>IPMS Closed Project</label>
    </listViews>
    <listViews>
        <fullName>Open_Project</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Projects_Number__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Estimated_Revenue_KUSD__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Business_Type__c</columns>
        <columns>Project_Level__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>Update_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>W: Win,L: Lost</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.IPMS_Project,Opportunity.Closed_Project</value>
        </filters>
        <label>IPMS Open Project</label>
    </listViews>
    <recordTypes>
        <fullName>Closed_Project</fullName>
        <active>true</active>
        <businessProcess>IPMS</businessProcess>
        <label>Closed Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hardware</fullName>
        <active>true</active>
        <businessProcess>Standard</businessProcess>
        <description>HW Sales</description>
        <label>Hardware</label>
    </recordTypes>
    <recordTypes>
        <fullName>IPMS_Project</fullName>
        <active>true</active>
        <businessProcess>IPMS</businessProcess>
        <label>IPMS Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>TSS</fullName>
        <active>true</active>
        <businessProcess>Standard</businessProcess>
        <description>TSS Sales</description>
        <label>TSS</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ClosedProjectCanNotEdit</fullName>
        <active>true</active>
        <errorConditionFormula>((  TEXT(StageName )  = &apos;L: Lost&apos; ||  TEXT(StageName )  = &apos;W: Win&apos; )  &amp;&amp;  (  ISCHANGED( Name )  || ISCHANGED( CloseDate ))) || ( ( TEXT(PRIORVALUE(StageName )) = &apos;L: Lost&apos; ||  TEXT(PRIORVALUE(StageName )) = &apos;W: Win&apos;) &amp;&amp;  ISCHANGED( StageName )  )</errorConditionFormula>
        <errorMessage>When project is closed, the project cann&apos;t edit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CorpProjectApprovedLevelCanNotChange</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Approval_Status__c , &apos;Approved&apos;)   &amp;&amp;  ISCHANGED( Project_Level__c ) &amp;&amp;   ( Text(PRIORVALUE(Project_Level__c )) = &apos;Corp&apos; )</errorConditionFormula>
        <errorDisplayField>Project_Level__c</errorDisplayField>
        <errorMessage>When the Crop project is approved, the project level ca&apos;t change.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Forecast_Limits</fullName>
        <active>false</active>
        <description>This validation rule set limit to forecast categary so that sales cannot select &apos;Omitted&apos; when Stage is 01~06</description>
        <errorConditionFormula>AND( OR(TEXT(StageName) = &apos;01 - Understand Customer&apos;,TEXT(StageName) = &apos;02 - Validate Opportunity&apos;,TEXT(StageName) = &apos;03 - Qualify the Opportunity&apos;,TEXT(StageName) = &apos;04A - Develop Solution&apos;,TEXT(StageName) = &apos;04B - Propose Solution&apos;,TEXT(StageName) = &apos;05 - Negotiate &amp; Close&apos;,TEXT(StageName) = &apos;06 - Won, Deploy &amp; Expand&apos;),TEXT(ForecastCategoryName) = &apos;Omitted&apos; )</errorConditionFormula>
        <errorMessage>Forecast Categary &apos;Omitted&apos; is not allowed when Stage is 01 ~ 06.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IPMS_Can_Not_Select_Project_To_Corp</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Approval_Status__c  )  &lt;&gt; &apos;Approved&apos; &amp;&amp;  TEXT( Project_Level__c )  = &apos;Corp&apos;</errorConditionFormula>
        <errorDisplayField>Project_Level__c</errorDisplayField>
        <errorMessage>You cann&apos;t set project level to &apos;Corp&apos;. If you want to change the project level to &apos;Corp&apos;, you can click &quot;Corp Project Approvel&quot; button.</errorMessage>
    </validationRules>
</CustomObject>